--- a/work/_posts/2018-01-16-callxpro.html
+++ b/work/_posts/2018-01-16-callxpro.html
@@ -9,6 +9,7 @@ class: post-template
 author: raul
 tags: [Mobile App, Android]
 subclass: 'post'
+category: work
 ---
 
 <p>Need the best solution for phone call recording on your Android device? Take control of your phone calls and choose the best <a href="https://play.google.com/store/apps/details?id=com.smsrobot.callrecorder">Call Recorder</a> app in 2018.</p>
