--- a/work/_posts/2018-02-05-gallerypro.html
+++ b/work/_posts/2018-02-05-gallerypro.html
@@ -9,6 +9,7 @@ author: raul
 tags: [Mobile App, Android]
 class: post-template
 subclass: 'post'
+category: work
 ---
 <p>Take control and keep your private stuff really private with the private <a href="https://play.google.com/store/apps/details?id=com.smsrobot.photox">Vault Gallery</a>.</p>
 
