--- a/work/_posts/2018-04-14-smsbutler.html
+++ b/work/_posts/2018-04-14-smsbutler.html
@@ -9,6 +9,7 @@ tags: [Mobile App, Android]
 author: raul
 class: post-template
 subclass: 'post'
+category: work
 ---
 <p>Too busy to respond to a text? SMS Butler might help you let people know that you are not available.</p>
 <p>Based on <a href="https://material.io/design/">Material Design</a>, the app offers a chat-like interface to schedule messages and also prepare default responses just in case you don't have time to answer messages (or don't feel like doing it). </p>
