--- a/work/_posts/2018-04-20-periodapp.html
+++ b/work/_posts/2018-04-20-periodapp.html
@@ -9,6 +9,7 @@ class: post-template
 author: raul
 tags: [Mobile App, Android]
 subclass: 'post'
+category: work
 ---
 <p><a href="https://play.google.com/store/apps/details?id=com.smsrobot.period">Period and Ovulation Tracker app</a> helps you to track your cycle and can predict your next menstruation, fertile days and ovulation. If you are trying to conceive ovulation calculator predicts your fertile days when chance of conceiving is highest and helps you get pregnant fast. Our if you are trying to avoid unwanted pregnancy you can use our app to plan safe days or get contraceptive pill reminders every day.</p>
 
