--- a/_posts/2018-05-07-liveshop.html
+++ b/_posts/2018-05-07-liveshop.html
@@ -9,6 +9,7 @@ class: post-template
 tags: [Mobile App, iOS]
 author: raul
 subclass: 'post'
+category: designs
 ---
 <p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
 
