--- a/work/_posts/2018-05-31-numberlocator.html
+++ b/work/_posts/2018-05-31-numberlocator.html
@@ -9,6 +9,7 @@ class: post-template
 tags: [Mobile App, Android]
 author: raul
 subclass: 'post'
+category: work
 ---
 <p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
 
