--- a/_posts/2018-08-02-trainest.html
+++ b/_posts/2018-08-02-trainest.html
@@ -3,7 +3,7 @@ layout: post-update
 current: post-update
 cover: assets/images/covers/trainestcover.jpg
 navigation: True
-title: Trainesaaaaaat - Workout & fitness manager
+title: Trainest - Workout & fitness manager
 date: 2018-08-02 10:00:00
 class: post-template
 tags: [Mobile App, iOS]
