--- a/_posts/2018-08-02-trainest.html
+++ b/_posts/2018-08-02-trainest.html
@@ -15,7 +15,7 @@ category: designs
 
 <p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
 
-<p><img src="{{ site.url }}assets/images/apps/trainest/trainest.jpg#full" alt="walking"></p>
+<p><img src="assets/images/apps/trainest/trainest.jpg#full" alt="walking"></p>
 
 
 
