--- a/work/_posts/2018-01-26-flagup.html
+++ b/work/_posts/2018-01-26-flagup.html
@@ -1,6 +1,6 @@
 ---
-layout: post
-current: post
+layout: post-pudate
+current: post-update
 cover: assets/images/covers/flagupcover.jpg
 navigation: True
 title: FlagUp - Online Car Repair Dealer
