--- a/_posts/2018-05-08-acm.html
+++ b/_posts/2018-05-08-acm.html
@@ -1,6 +1,6 @@
 ---
-layout: post
-current: post
+layout: post-update
+current: post-update
 cover: assets/images/covers/acmcover.jpg
 navigation: True
 title: Association for Computer Machinery UPV Student Chapter
