All posts updated with text content

--- a/_posts/2018-03-12-james.html
+++ b/_posts/2018-03-12-james.html
@@ -3,7 +3,7 @@ layout: post-update
 current: post-update
 cover: assets/images/covers/jamescover.jpg
 navigation: True
-title: James - Paris's Local services
+title: James - Paris's professionals finder
 date: 2018-03-12 10:00:00
 class: post-template
 tags: [Mobile App, iOS]
@@ -11,11 +11,19 @@ author: raul
 subclass: 'post'
 category: designs
 ---
-<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
+<p>James is a mobile app to find trusted and verified professionals who provide a wide range of services from babysitting, to housekeeping or private teachers.</p>
 
-<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+<p>The interface shows all the services provided by pro freelancers, immediately contractable via the app. Just select what you need. All the information about the worker (even the area on which they work) is displayed. Prices and discounts are immediately applied. Easy as 1, 2, 3! (actually, also 4).
+
+Whenever. Wherever. Just a few taps away! </p>
 
 <p><img src="assets/images/apps/james/james.jpg#full" alt="walking"></p>
+
+All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
+
+<p class="footnote">All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
+
+Icons have been designed specifically for this app.</p>
 
 
 
