--- a/_posts/2018-08-02-trainest.html
+++ b/_posts/2018-08-02-trainest.html
@@ -11,11 +11,11 @@ author: raul
 subclass: 'post'
 category: designs
 ---
-<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
+<p>Do you need to take control of your diet and improve your nutrition? Then Trainest is your best ally! Start to register all your activity. From daily joggging to each toast you eat on the morning. From dusk till dawn.</p>
 
-<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+<p>For this concept, only the nutrition part has been developed.</p>
 
 <p><img src="assets/images/apps/trainest/trainest.jpg#full" alt="walking"></p>
 
-
+<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
 
