--- a/work/_posts/2018-01-26-flagup.html
+++ b/work/_posts/2018-01-26-flagup.html
@@ -37,3 +37,5 @@ Also, FlagUp can be accessed from an iOS platform. The interface offers again un
 
 <p><img src="assets/images/flagup/project-flagup-promo.jpg#full" alt="walking"></p>
 
+<p class="footnote"> All icons have been designed specifically for this app.</p>
+
