--- a/work/_posts/2018-02-05-gallerypro.html
+++ b/work/_posts/2018-02-05-gallerypro.html
@@ -17,7 +17,7 @@ category: work
 
 <p><img src="assets/images/apps/gallery/photox.jpg#full" alt="walking"></p>
 
-All icons have been designed specifically for this app. The images come from a <a href="http://pexels.com/">free stock source</a>.
+<p class="footnote">All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. All icons have been designed specifically for this app.</p>
 
 
 
