--- a/work/_posts/2018-04-20-periodapp.html
+++ b/work/_posts/2018-04-20-periodapp.html
@@ -17,5 +17,7 @@ category: work
 
 <p><img src="assets/images/apps/period/periodapp.jpg#full" alt="walking"></p>
 
+<p class="footnote"> All icons have been designed specifically for this app.</p>
+
 
 
