--- a/work/_posts/2018-06-13-web-art-director-solei.html
+++ b/work/_posts/2018-06-13-web-art-director-solei.html
@@ -28,4 +28,5 @@ category: work
 <p><a href="http://html-color.org/EDE14A">Yellow</a> is the color of the sun. Of freshness. Of positivity. Of energy. And it contrasts perfectly alongside with a dark <a href="http://html-color.org/363636">deep grey</a> over a immaculate white.</p>
 
 <p><img src="assets/images/artdirector/artdirectorsoleifull.jpg#full" alt="walking"></p>
-<p></p>
+
+<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>.</p>
