--- a/_posts/2017-12-03-movieticket.html
+++ b/_posts/2017-12-03-movieticket.html
@@ -11,11 +11,20 @@ author: raul
 subclass: 'post'
 category: designs
 ---
-<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
+<p>The next successes in billboard are out. Are you more into fighting an ancient war between two rival species or you rather save the world under the hilt of the sword of the strongest amazon? Tough decision, isn't it? Whatever it is,do it quickly! Tickets are running out!</p>
 
-<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+<p>Under the call:</p>
+
+<q><i>&quot;Design a friendly and engaging movie ticket booking experience for an app or website!&quot;</i></q>
+
+<p><a href="https://www.uplabs.com/challenges/movie-ticket-challenge/results">UpLabs</a> challenges its best designers to come up with a location-based, few-step and (why not) pretty interface to ease the ticket purchase. </p>
+
+<h1>The result &#x1F3A5 &#x1F37F</h1>
+
+<p>The app searches through all the cinemas around using User's filters to list the last movies and their showtimes. On various days. Under many categories. Any cinema nearby.</p>
+
+<p>After you've chosen to confront (careful, spoiler here) Ares with your Godkiller, select an (probably more) available seat(s) among the recommendations, checkout, apply discounts (if applicable), verify you've not missed anything, and you're done!</p>
+
+<p>Check out the interface! (Also <a href="https://www.uplabs.com/posts/movie-tickets-app-icons">on the web</a> )</p>
 
 <p><img src="assets/images/apps/ticketmovie/ticketmovie.jpg#full" alt="walking"></p>
-
-
-
