--- a/_posts/2018-03-24-forestcompany.html
+++ b/_posts/2018-03-24-forestcompany.html
@@ -7,16 +7,17 @@ title: Forest Company - Real Estate Management
 date: 2018-03-24 10:00:00
 class: post-template
 author: raul
-tags: [Mobile App, iOS]
+tags: [Mobile App, iOS, Concept Design]
 subclass: 'post'
 category: designs
 ---
-<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
+<p>Acquiring a new property might be a headache. Specially when it has not been built yet. How do you control your money is being invested well?</p>
 
-<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+<p>Here's a quick concept of how to be aware of project updates, payments collection, maintenance requests, documentation, etc...</p>
 
 
 <p><img src="assets/images/apps/baya/baya.jpg#full" alt="walking"></p>
 
+<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
 
 
