--- a/_posts/2018-05-10-coinseed.html
+++ b/_posts/2018-05-10-coinseed.html
@@ -11,11 +11,12 @@ author: raul
 subclass: 'post'
 category: designs
 ---
-<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
+<p>In the era of Bitcoin fever, investing in cryptocurrencies might result very tricky. Then what about micro-investing? Coinseed is allows Users to effortlessly enter the trade trend by only adding up your spare change to your virtual wallet. The rest is up to them! </p>
 
-<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+<p>Check out the redesign concept!</p>
 
 <p><img src="assets/images/apps/coinseed/coinseed.jpg#full" alt="walking"></p>
 
+<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
 
 
