--- a/_posts/2018-05-15-aire.html
+++ b/_posts/2018-05-15-aire.html
@@ -6,16 +6,17 @@ navigation: True
 title: Aero - Quick Money Transfer
 date: 2018-05-15 10:00:00
 class: post-template
-tags: [Mobile App, iOS]
+tags: [Mobile App, iOS, Concept Design]
 author: raul
 subclass: 'post'
 category: designs
 ---
-<p>Find a phone number without internet, displaying location of caller with network name, City, State on every incoming & outgoing calls over call screen. Find out where are your friends! Just kidding. What would you want to do that? Anyway, if you insist...</p>
-
-<p>The app comes with two different styles as is still in development. This is why we're still finishing concepts...</p>
+<p>Send money to family and/or friends from your phone instantly!</p>
 
 <p><img src="assets/images/apps/aero/aero.jpg#full" alt="walking"></p>
 
+All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
+
+<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
 
 
