--- a/work/_posts/2018-01-16-callxpro.html
+++ b/work/_posts/2018-01-16-callxpro.html
@@ -18,5 +18,6 @@ category: work
 
 <p><img src="assets/images/apps/callrecorder/callxpro.jpg#full" alt="walking"></p>
 
-All icons have been designed specifically for this app.
+<p class="footnote">All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. All icons have been designed specifically for this app.</p>
+
 
