All posts updated with text content

--- a/projects/_posts/2018-01-16-STB.html
+++ b/projects/_posts/2018-01-16-STB.html
@@ -9,8 +9,8 @@ class: post-template
 author: raul
 tags: [Mobile App, Android]
 subclass: 'post'
-category: work
+category: projects
 ---
 
-<p>Project coming soon... Stay tuned for updates!</p>
+<p>Project coming soon... </p>
 
