Minor updates + Series

--- a/series/_posts/2018-01-16-STB.html
+++ b/series/_posts/2018-01-16-STB.html
@@ -9,7 +9,7 @@ class: post-template
 author: raul
 tags: [Mobile App, Android]
 subclass: 'post'
-category: projects
+category: series
 ---
 
 <p>First project of SHARE will introduce a music app with new features that follow its series path. Design is coming soon... </p>
