--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: normal
-current: work
+current: projects
 class: 'home-template'
 navigation: True
 ---
@@ -10,7 +10,7 @@ navigation: True
 into the {body} of the default.hbs template -->
 
 <!-- The big featured header, it uses blog cover image as a BG if available -->
-<header class="site-header outer {% if page.cover or site.cover %}" style="background-image:  url({{ site.baseurl }}assets/images/projects.jpg) {% else %}no-cover{% endif %}">
+<header class="site-header outer {% if page.cover or site.cover %}" style="background-image:  url({{ site.baseurl }}assets/images/projects.jpeg) {% else %}no-cover{% endif %}">
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
