--- a/series/index.html
+++ b/series/index.html
@@ -10,13 +10,13 @@ navigation: True
 into the {body} of the default.hbs template -->
 
 <!-- The big featured header, it uses blog cover image as a BG if available -->
-<header class="site-header outer {% if page.cover or site.cover %}" style="background-image:  url({{ site.baseurl }}assets/images/projects.jpg) {% else %}no-cover{% endif %}">
+<header class="site-header outer {% if page.cover or site.cover %}" style="background-image:  url({{ site.baseurl }}assets/images/series.jpg) {% else %}no-cover{% endif %}">
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
                 Series
             </h1>
-            <h2 class="site-description">Personal designs and concepts</h2>
+            <h2 class="site-description">A collection of projects</h2>
         </div>
         {% include site-nav.html %}
     </div>
