--- a/_posts/2018-03-12-james.html
+++ b/_posts/2018-03-12-james.html
@@ -21,9 +21,10 @@ Whenever. Wherever. Just a few taps away! </p>
 
 All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
 
-<p class="footnote">All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
+<div class="footnote">
+<p>All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
 
 Icons have been designed specifically for this app.</p>
-
+</div>
 
 
