--- a/_posts/2018-05-07-liveshop.html
+++ b/_posts/2018-05-07-liveshop.html
@@ -17,6 +17,7 @@ category: designs
 
 <p><img src="assets/images/apps/liveshop/liveshop.jpg#full" alt="walking"></p>
 
-<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
-
+<div class="footnote">
+<p>All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
+</div>
 
