--- a/work/_posts/2018-02-05-gallerypro.html
+++ b/work/_posts/2018-02-05-gallerypro.html
@@ -17,7 +17,8 @@ category: work
 
 <p><img src="assets/images/apps/gallery/photox.jpg#full" alt="walking"></p>
 
-<p class="footnote">All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. All icons have been designed specifically for this app.</p>
-
+<div class="footnote">
+<p>All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. All icons have been designed specifically for this app.</p>
+</div>
 
 
