--- a/work/_posts/2018-04-14-smsbutler.html
+++ b/work/_posts/2018-04-14-smsbutler.html
@@ -18,5 +18,6 @@ category: work
 
 <p><img src="assets/images/apps/smsbutler/sms-butler-icons.jpg#full" alt="walking"></p>
 
-<p class="footnote">All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. All icons have been designed specifically for this app.</p>
-
+<div class="footnote">
+<p>All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. All icons have been designed specifically for this app.</p>
+</div>
