--- a/designs/index.html
+++ b/designs/index.html
@@ -14,9 +14,9 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                Series
+                Designs
             </h1>
-            <h2 class="site-description">A collection of projects</h2>
+            <h2 class="site-description">A collection of mini projects</h2>
         </div>
         {% include site-nav.html %}
     </div>
