--- a/work/_posts/2018-06-13-web-art-director-solei.html
+++ b/work/_posts/2018-06-13-web-art-director-solei.html
@@ -29,4 +29,6 @@ category: work
 
 <p><img src="assets/images/artdirector/artdirectorsoleifull.jpg#full" alt="walking"></p>
 
-<p class="footnote">All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>.</p>
+<div class="footnote">
+<p>All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>.</p>
+</div>
