--- a/_posts/2018-08-02-trainest.html
+++ b/_posts/2018-08-02-trainest.html
@@ -13,7 +13,7 @@ category: designs
 ---
 <p>Do you need to take control of your diet and improve your nutrition? Then Trainest is your best ally! Start to register all your activity. From daily joggging to each toast you eat on the morning. From dusk till dawn.</p>
 
-<p>For this concept, only the nutrition part has been developed.</p>
+<p>This concept includes the full development of the nutrition part. Starting from an holistic view of the nutrition evolution during the day, the User can add meals to the database and keep track of the daily intake.</p>
 
 <p><img src="assets/images/apps/trainest/trainest.jpg#full" alt="walking"></p>
 
