--- a/designs/index.html
+++ b/designs/index.html
@@ -14,13 +14,9 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                {% if site.logo %}
-                    <img class="site-logo" src="{{ site.baseurl }}assets/images/logo-projects.png" alt="{{ site.title }}"/>
-                {% else %}
-                    {{ site.title }}
-                {% endif %}
+                Designs
             </h1>
-            <h2 class="site-description">Personal designs and concepts</h2>
+            <h2 class="site-description">Concepts and challenges</h2>
         </div>
         {% include site-nav.html %}
     </div>
