--- a/projects/index.html
+++ b/projects/index.html
@@ -14,11 +14,7 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                {% if site.logo %}
-                    <img class="site-logo" src="{{ site.baseurl }}assets/images/logo-projects.png" alt="{{ site.title }}"/>
-                {% else %}
-                    {{ site.title }}
-                {% endif %}
+                Projects
             </h1>
             <h2 class="site-description">Personal designs and concepts</h2>
         </div>
