--- a/series/index.html
+++ b/series/index.html
@@ -14,7 +14,7 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="site-header-content">
             <h1 class="site-title">
-                Designs
+                Series
             </h1>
             <h2 class="site-description">A collection of mini projects</h2>
         </div>
