Licences home post added

--- a/_posts/2018-09-28-licences.html
+++ b/_posts/2018-09-28-licences.html
@@ -1,7 +1,7 @@
 ---
 layout: post-update
 current: post-update
-cover: assets/images/covers/start.jpg
+cover: assets/images/covers/licenses.jpg
 navigation: True
 title: Licences and Creative Commons
 date: 2018-09-28 10:00:00
@@ -25,5 +25,9 @@ category: home
 
 <ul>Images - <a href="https://www.pexels.com">Pexels Free Stock Photos</a></ul>
 <ul>Icons - <a href="https://www.flaticon.com">Flat Icon: Free Vector Icons</a></ul>
+
+<h2>Web resources</h2>
+<p>Besides, the resources from this page have also been imported from open sources:</p>
+<ul>Web style - <a href="https://github.com/jekyller/jasper2">Jekyll Jasper 2 Theme</a></ul>
 
 <p>If you think any of the resources used is inappropiate, dishonest, fraudulent, misleading or might attempt against anything or anyone, please contact me and we'll sort it out somehow!</p>
