Covers swapped + SHARE upgraded

--- a/_posts/2018-09-28-licences.html
+++ b/_posts/2018-09-28-licences.html
@@ -30,4 +30,7 @@ category: home
 <p>Besides, the resources from this page have also been imported from open sources:</p>
 <ul>Web style - <a href="https://github.com/jekyller/jasper2">Jekyll Jasper 2 Theme</a></ul>
 
+<h1>Projects</h1>
+Projects fall under a different category. As they have been developed thoroughfully, and in order to provide full resources of it, they display a list of all the sources used.
+
 <p>If you think any of the resources used is inappropiate, dishonest, fraudulent, misleading or might attempt against anything or anyone, please contact me and we'll sort it out somehow!</p>
