--- a/projects/_posts/2018-01-16-STB.html
+++ b/projects/_posts/2018-01-16-STB.html
@@ -3,11 +3,11 @@ layout: post-update
 current: post-update
 cover: assets/images/projects/SHARE/sharethebeatcoveroff.jpg
 navigation: True
-title: Share The Beat - Share music like never before
+title: Share The Beat - Listening music. Together
 date: 2018-01-16 10:00:00
 class: post-template
 author: raul
-tags: [Mobile App, Android]
+tags: [SHARE]
 subclass: 'post'
 category: projects
 ---
