--- a/designs/_posts/2018-05-15-aire.html
+++ b/designs/_posts/2018-05-15-aire.html
@@ -15,7 +15,7 @@ category: designs
 
 <p><img src="assets/images/apps/aero/aero.jpg#full" alt="walking"></p>
 
-All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).
+<p>All images in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
 
 <div class="footnote">
 <p >All images and icons in this concept come from a <a href="http://pexels.com/">free stock source</a>. As this is part of a <a href="http://99designs.com/">99Designs</a> contest, the logo and any other visual material used for the design were provided, therefore I do not own them. The concepts are used only for personal promotion purposes (non-commercial intentions).</p>
