--- a/designs/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
+++ b/designs/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
@@ -41,4 +41,9 @@ category: designs
 <p><img src="assets/images/ipt/project-ipt-madrid.jpg#full" alt="walking"></p>
 
 <h2 id="acorunaipt">A Coruña 2019 &#x1F419</h2>
+<p>To edit...</p>
+
+<p><img src="assets/images/ipt/project-ipt-coruna.jpg#full" alt="walking"></p>
+
+<h2 id="acorunaipt">Salamanca 2020 U+1F3DB</h2>
 <p>Coming soon...</p>
