A Coruña added to Designs/IPT

--- a/designs/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
+++ b/designs/_posts/2018-04-28-informática-para tod@s-ACM-W-elebrations.html
@@ -45,5 +45,5 @@ category: designs
 
 <p><img src="assets/images/ipt/project-ipt-coruna.jpg#full" alt="walking"></p>
 
-<h2 id="acorunaipt">Salamanca 2020 U+1F3DB</h2>
+<h2 id="acorunaipt">Salamanca 2020 &#127963</h2>
 <p>Coming soon...</p>
